# monolayer-cell-tracking

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
monolayer_cell_tracking/: segmentation.py  tracking.py  trajectories.py  video.py  visualization.py
monolayer_cell_tracking/data/: README.md
monolayer_cell_tracking/models/: README.md
scripts/: README.md  download_raw_data.py  download_segmentation_data.py  download_segmentation_models.py  download_trajectories.py  parallelize.py  parallelize.sh
tests/: test_01_video.py  test_02_segmentation.py  test_03_tracking.py  test_04_trajectories.py  test_05_visualization.py
